# git2-ext

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: settings.yml
.github/workflows/: ci.yml  pre-commit.yml  rust-next.yml
benches/: ops.rs
src/: bytes.rs  hooks.rs  lib.rs  ops.rs  testing.rs  tree.rs  utils.rs
tests/: ops.rs
tests/testsuite/: ops.rs
