[package]
name = "git2-ext"
version = "0.5.0"
description = "git2 Extensions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gitext-rs/git2-ext.git"
homepage = "https://github.com/gitext-rs/git2-ext"
documentation = "http://docs.rs/git2-ext/"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["git"]
edition = "2021"
rust-version = "1.65.0"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/gitext-rs/git2-ext/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
git2 = { version = "0.17.0", default-features = false }
log = "0.4.17"
itertools = "0.10.5"
which = "4.4.0"
bstr = { version = "1.4.0", default-features = false }
tempfile = "3.5.0"
shlex = "1.1.0"

[dev-dependencies]
git-fixture = { version = "0.3.2", features = ["yaml"] }
assert_fs = "1.0.12"
eyre = "0.6.8"
snapbox = "0.4.10"
regex = "1.7.3"
criterion = "0.4.0"

[[bench]]
harness = false
name = "ops"
path = "benches/ops.rs"
